[gd_scene load_steps=10 format=3 uid="uid://dcmvwdjbytety"]

[ext_resource type="Script" uid="uid://dt83mh3hbxwe6" path="res://scripts/battle_test.gd" id="1_legaw"]
[ext_resource type="Script" uid="uid://bhdts0363nnm8" path="res://scripts/battle_manager.gd" id="2_tp7yc"]
[ext_resource type="Script" uid="uid://b4vfx11poblgj" path="res://scripts/char_data.gd" id="3_smx2l"]
[ext_resource type="Resource" uid="uid://d27kr4qwd3ng" path="res://ressources/Player Characters/hero.tres" id="4_5txia"]
[ext_resource type="Resource" uid="uid://dayx4q8vorwm3" path="res://ressources/Enemies/Rentner.tres" id="5_766wr"]
[ext_resource type="Script" uid="uid://c3icaeegf4j34" path="res://scripts/party_hud_container.gd" id="6_smx2l"]
[ext_resource type="PackedScene" uid="uid://xm18nkpojt6g" path="res://scenes/PartyMemberUI.tscn" id="7_5txia"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_766wr"]
content_margin_left = 50.0
content_margin_top = 10.0
content_margin_right = 50.0
content_margin_bottom = 10.0
bg_color = Color(0.035110984, 0.064991556, 0.1150075, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_blend = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2aica"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
bg_color = Color(0.035110984, 0.064991556, 0.1150075, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_blend = true

[node name="BattleTest" type="Node"]
script = ExtResource("1_legaw")

[node name="BattleManager" type="Node" parent="." node_paths=PackedStringArray("turn_order_container")]
script = ExtResource("2_tp7yc")
party_data = Array[ExtResource("3_smx2l")]([ExtResource("4_5txia")])
enemy_data = Array[ExtResource("3_smx2l")]([ExtResource("5_766wr"), ExtResource("5_766wr")])
turn_order_container = NodePath("../DebugUI/CanvasLayer/TurnOrderContainer")

[node name="DebugUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CanvasLayer" type="CanvasLayer" parent="DebugUI"]

[node name="TurnOrderContainer" type="HBoxContainer" parent="DebugUI/CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 40.0
grow_horizontal = 2
theme_override_constants/separation = 12

[node name="PartyMenuContainer" type="HBoxContainer" parent="DebugUI/CanvasLayer"]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -188.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 10
alignment = 1

[node name="ActionsContainer" type="VBoxContainer" parent="DebugUI/CanvasLayer/PartyMenuContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
alignment = 1

[node name="ColorRect" type="PanelContainer" parent="DebugUI/CanvasLayer/PartyMenuContainer/ActionsContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_766wr")

[node name="VBoxContainer" type="VBoxContainer" parent="DebugUI/CanvasLayer/PartyMenuContainer/ActionsContainer/ColorRect"]
layout_mode = 2
theme_override_constants/separation = 8
alignment = 1

[node name="AttackBtn" type="Button" parent="DebugUI/CanvasLayer/PartyMenuContainer/ActionsContainer/ColorRect/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 20
disabled = true
text = " Attack "

[node name="GuardBtn" type="Button" parent="DebugUI/CanvasLayer/PartyMenuContainer/ActionsContainer/ColorRect/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 20
disabled = true
text = "Guard"

[node name="SkillsBtn" type="Button" parent="DebugUI/CanvasLayer/PartyMenuContainer/ActionsContainer/ColorRect/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 20
disabled = true
text = "Skills"

[node name="ItemBtn" type="Button" parent="DebugUI/CanvasLayer/PartyMenuContainer/ActionsContainer/ColorRect/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 20
disabled = true
text = "Items"

[node name="ColorRect" type="PanelContainer" parent="DebugUI/CanvasLayer/PartyMenuContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_2aica")

[node name="PartyHUDContainer" type="VBoxContainer" parent="DebugUI/CanvasLayer/PartyMenuContainer/ColorRect"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8
script = ExtResource("6_smx2l")
party_member_ui_scene = ExtResource("7_5txia")

[node name="Background" type="TextureRect" parent="DebugUI"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="LogLabel" type="Label" parent="DebugUI"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="VBoxContainer" type="VBoxContainer" parent="DebugUI"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -21.5
offset_right = 96.0
offset_bottom = 21.5
grow_vertical = 2
theme_override_constants/separation = 12

[node name="StartBattleBtn" type="Button" parent="DebugUI/VBoxContainer"]
layout_mode = 2
text = "Start Battle"

[node name="EnemyPositionAnchor" type="Control" parent="DebugUI"]
layout_mode = 1
anchor_left = 0.5
anchor_top = 0.4
anchor_right = 0.5
anchor_bottom = 0.4
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="EnemyPartyContainer" type="Node2D" parent="DebugUI/EnemyPositionAnchor"]

[connection signal="pressed" from="DebugUI/CanvasLayer/PartyMenuContainer/ActionsContainer/ColorRect/VBoxContainer/AttackBtn" to="." method="_on_basic_attack_pressed"]
[connection signal="pressed" from="DebugUI/VBoxContainer/StartBattleBtn" to="." method="_on_start_battle_btn_pressed"]
